assets/css/style.css
/* ... */
#header .navbar-toggle .icon-bar {
  background-color: #817e79;
}
#header form {
  padding: 0;
  margin: 0;
}
#header form .form-group {
  margin-top: 10px;
  margin-bottom: 0;
}
#header form .form-control {
  border: none;
  border-bottom: 1px solid white;
  border-left: 1px solid white;
  border-top: 1px solid white;
  border-radius: 0;
  box-shadow: none;
  -webkit-box-shadow: none;
  height: 28px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
}
#header form .form-control:focus {
  border-bottom: 1px solid #8f8c8e;
  border-left: 1px solid #8f8c8e;
  border-top: 1px solid #8f8c8e;
}
#header form .input-group-addon {
  border: none;
  border-radius: 0;
  padding: 0;
}
#header form .input-group-addon button[type='submit'] {
  border: 1px solid #8f8c8e;
  background-color: #8f8c8e;
  color: white;
  display: block;
  padding: 6px 12px;
  width: 44px;
}
#header .nav .open > a,
#header .nav .open > a:hover,
#header .nav .open > a:focus {
  background-color: #fcfcfc;
}
#header .nav .active {
  background-color: white;
}
#header .nav > li > a:link,
#header .nav > li > a:visited,
#header .nav > li > a:hover {
  border-top: 4px solid transparent;
  color: #8f8c8e;
  display: block;
  font-weight: bold;
  height: 48px;
  line-height: 43px;
  padding: 0 12px;
  text-decoration: none;
  transition: all 0.2s ease-in;
  behavior: url(../../vendor/css/PIE.htc);
}
#header .nav > li > a:hover {
  background-color: white;
  border-top: 4px solid #cd6b00;
  color: #353439;
}
#header .nav > li > a:focus {
  background-color: #fcfcfc;
}
#header .nav > li > a.icon {
  width: 40px;
}
#header .nav > li > a.icon-github {
  background: url(../images/icon-github-off.png) no-repeat 8px 8px;
}
#header .nav > li > a.icon-github:hover {
  background: #ffffff url(../images/icon-github-on.png) no-repeat 8px 8px;
}
#header .nav > li > a.icon-twitter {
  background: url(../images/icon-twitter-off.png) no-repeat 8px 8px;
}
#header .nav > li > a.icon-twitter:hover {
  background: #ffffff url(../images/icon-twitter-on.png) no-repeat 8px 8px;
}
#header .nav > li > a.icon-googlegroup {
  background: url(../images/icon-googlegroup-off.png) no-repeat 8px 8px;
}
#header .nav > li > a.icon-googlegroup:hover {
  background: #ffffff url(../images/icon-googlegroup-on.png) no-repeat 8px 8px;
}
#header .navbar-right .dropdown-menu {
  left: 0;
}
#header .dropdown-menu {
  border: none;
  border-bottom: 4px solid #cd6b00;
  border-radius: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
  min-width: 100%;
  padding: 0;
}
#header .dropdown-menu > li > a {
  background-color: #fcfcfc;
  color: #8f8c8e;
  font-weight: bold;
  padding: 6px 12px;
}
#header .dropdown-menu > li > a:hover {
  background-image: none;
  color: #353439;
}
#header .collapse.in {
  clear: both;
  padding: 0;
}
#header .collapse.in .navbar-nav {
  margin: 0;
}
#header .collapse.in ul li a.icon {
  width: 100%;
}

.highlight-container,
.highlight {
  overflow: auto;
}
.highlight-container pre,
.highlight pre {
  background-color: transparent;
  border: none;
  padding: 0;
  margin: 0;
}
.highlight-container code {
  font-size: 0.9em;
}
.highlight-container .hljs {
  color: #8f8c8e;
  display: block;
}
.highlight-container .keyword {
  color: #848f00;
}
.highlight-container .number {
  color: #c3c47a;
}
.highlight-container .string {
  color: #cd6b00;
}
.highlight-container .keyword,
.highlight-container .title {
  font-weight: bold;
}
.highlight-scala,
.highlight-text {
  margin-bottom: 10px;
}
.highlight-scala .highlight pre,
.highlight-text .highlight pre {
  background-color: #fcfcfc;
  border: 1px solid #eee;
  border-radius: 4px;
  color: #666;
  font-size: 0.9em;
  padding: 5px 10px;
}
.highlight-scala .highlight .s {
  color: #cd6b00;
}
.highlight-scala .highlight .c1 {
  color: #cccccc;
}
.highlight-scala .highlight .mi {
  color: #c3c47a;
}
.highlight-scala .highlight .k,
.highlight-scala .highlight .kt {
  color: #848f00;
  font-weight: bold;
}
.highlight-scala .highlight .nc {
  color: #cd6b00;
  font-weight: bold;
}

#logos {
  box-shadow: 0px -10px 8px -8px #e7e6e2;
}
#logos header.row-fluid {
  background-color: #f1f0ed;
}
#logos h2 {
  color: #8f8c8e;
  font-weight: bold;
  text-align: center;
}


#steps {
  background: url(../images/subtle_grunge.png) repeat;
  box-shadow: inset 0px 10px 8px -8px #817e79;
  overflow: auto;
}
#steps h2 {
  color: #222222;
  font-family: 'Maven Pro', sans-serif;
  font-size: 1.4em;
  font-weight: bold;
  text-shadow: #c7c6c2 2px 3px 10px;
}
#steps h2 span {
  border-bottom: 4px solid #cd6b00;
}
#steps .step {
  margin-bottom: 40px;
  margin-top: 40px;
}
#steps .step-content {
  background-color: white;
  border-bottom: 4px solid #cd6b00;
  box-shadow: 2px 3px 10px 0px #c7c6c2;
  margin-top: 10px;
  min-height: 250px;
  padding: 10px 15px;
}
#steps .step-content.chart img {
  margin-top: 38px;
}
#steps .step-content .image-center {
  text-align: center;
}
#steps .step-content .image-center img {
  margin-bottom: 20px;
  margin-left: 12px;
  margin-top: 20px;
}
#steps .step-content .image-center.image-last img {
  margin-top: 0;
}
#steps .col-xs-6 {
  height: 100%;
  padding: 0 15px;
}

#testimonials {
  background: url(../images/subtle_grunge.png) repeat;
  box-shadow: inset 0px 10px 8px -8px #817e79;
}
#testimonials .content-wrapper {
  padding: 0 15px;
}
#testimonials .testimonial {
  margin-bottom: 40px;
  margin-top: 40px;
  white-space: nowrap;
}
#testimonials .testimonial .logo,
#testimonials .testimonial blockquote {
  display: inline-block;
  vertical-align: top;
}
#testimonials .logo {
  -webkit-filter: drop-shadow(2px 3px 4px #c7c6c2);
  width: 108px;
}
#testimonials blockquote {
  background-color: white;
  border: none;
  box-shadow: 2px 3px 10px 0px #c7c6c2;
  font-size: 1em;
  font-style: italic;
  margin: 0;
  white-space: normal;
  width: 738px;
}
/* ... */

